# verify

./: .gitignore  CNAME  authentix_encrypt.py  index.html  key.html  send.html  sign.html  verify.html
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/app/authentixsign/: AuthentixCore.kt  BiometricHelper.kt  FingerprintView.kt  MainActivity.kt  MonotonicCounter.kt  QrPlaceholderView.kt  SplashActivity.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml
authentix-backend/: .gitignore  migrate-001.sql  migrate-002.sql  package.json  schema.sql  seed.sql  wrangler.toml
authentix-backend/src/: index.js
authentix-core/: AuthentixCore.kt  Cargo.toml
authentix-core/.cargo/: config.toml
authentix-core/examples/: gen_test_kit.rs
authentix-core/src/: crypto.rs  ffi.rs  lib.rs  types.rs
