[package]
name = "authentix-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
ed25519-dalek = { version = "2", features = ["hazmat"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha3 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
jni = "0.21"
